--- a/SourceCodes/sl_source.css
+++ b/SourceCodes/sl_source.css
@@ -207,7 +207,7 @@ background-color: #f04747 }
 .chat-3bRxxu {
 	background: transparent !important;
 }
-.spinner-wandering-cubes .spinner-item {
+.wanderingCubesItem-WPXqao {
 	background-color: var(--dark-red);
 }
 .videoBackground-3AY_fu, 
