--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -7,6 +7,9 @@
     border-radius: 0;
 }
 /* ScrollBars */ 
+.scrollerWrap-1IAIlv {
+    width: 70px;
+}
 .scrollerWrap-2su1QI {
     flex: 0.998;
 } 
