--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -2036,3 +2036,6 @@
 .theme-dark .codeRedemptionRedirect-1wVR4b {
     background-color: #191717;
 }
+.avatarUploaderInner-3UNxY3 {
+    background: #010101;
+}
