--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1612,7 +1612,7 @@
     padding: 0px 10px;
 }
 .headerText-2sdzFM {
-    margin-bottom: 5px;
+    padding-bottom: 5px;
     margin-top: -5px;
 }
 .lookInverted-2D7oAl {
