--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1610,6 +1610,7 @@
 }
 .headerPlaying-j0WQBV {
     background-image: linear-gradient(10deg, #1a1a1a 2%, #14151e, #141420 );
+    background-color: #1e1e1e;
 }
 /*
 .headerPlaying-j0WQBV .activity-11LB_k {
