--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -2,7 +2,7 @@
 #app-mount {
     background-color: #1a1a1a;
 }
-.da-flex > .da-wrapper,
+.da-layer > .da-flex > .da-wrapper,
 .base-3dtUhz {
     border-radius: 0;
 }
