--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -2083,7 +2083,7 @@ rect[transform] {
 .da-chat div::after {
     background-image: none !important;
 }
-.theme-dark .da-container > .da-container {
+.theme-dark .container-1r6BKw {
     background: #181818;
 }
 #user-settings .da-sidebar .da-header, #bd-settings-sidebar .ui-tab-bar-header {
