--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1869,53 +1869,57 @@
     flex-direction: unset;
 }
 
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z[style*="transform: translateY(-100%) translateX(0%) translateZ(0px);"] {
+div#popout_1 {
     position: absolute;
     left: 70px !important;
     width: 240px !important;
     margin-top: 38px;
     height: 52px !important;
-    transition-delay: 150ms;
+    transition-delay: 10ms;
     border-radius: 0;
+    bottom: 0 !important;
+    transition: 250ms ease-in;
 }
+
 .separator-2zcjq8 {display: none;}
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z[style*="transform: translateY(-100%) translateX(0%) translateZ(0px);"] .menu-Sp6bN1 {
+div#popout_1 .da-menu {
     width: 240px;
     border-radius: 0;
+    bottom: 0;
 }
 .alt-3btY0e .item-1GzJrl .statusIconText-3b4TkH div+div {display: none;}
 .theme-dark .alt-3btY0e .helper-2c73HK {
     color: transparent;
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .item-1GzJrl {
+div#popout_1 .item-1GzJrl {
     transition: 350ms ease-in, box-shadow 500ms ease;/*
     box-shadow: inset -2px -2px 7px 0px rgba(26, 26, 26, 0.75); */
     background-image: linear-gradient(140deg, transparent,rgba(0,0,0,0.15), rgba(0,0,0,.25))
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .status-3fQvEa {
+div#popout_1 .status-3fQvEa {
     background-color: transparent;
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .item-1GzJrl:first-child {
+div#popout_1 .item-1GzJrl:first-child {
     background-color: #43b581;
     transition-delay: 150ms;
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .item-1GzJrl:nth-child(3) {
+div#popout_1 .item-1GzJrl:nth-child(3) {
     background-color: #faa61a;
     transition-delay: 200ms;
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .item-1GzJrl:nth-child(4) {
+div#popout_1 .item-1GzJrl:nth-child(4) {
     background-color: #f04747;
     transition-delay: 250ms;
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .item-1GzJrl:nth-child(5) {
+div#popout_1 .item-1GzJrl:nth-child(5) {
     background-color: #747f8d;
     transition-delay: 300ms;
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .item-1GzJrl:hover {
+div#popout_1 .item-1GzJrl:hover {
     opacity: 0.9;
     transition: 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.popoutTopLeft-b5Eb3O.noArrow-3BYQ0Z .item-1GzJrl:active {
+div#popout_1 .item-1GzJrl:active {
     transform: scale(0.95);
     transition: 120ms ease-in;
 }
