--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1552,34 +1552,38 @@
 .theme-light .quickMessage-1yeL4E:focus {
     border-color: rgba(24, 24, 24, 0.8);
 }
-.theme-dark .headerTop-3C2Zn0 .popout-2fzvxG .image-33JSyf{
-    background-color: #1e1e1e;
+.da-headerTop {
+    min-height: 250px;
+    padding: 0;
 }
-.theme-light .headerTop-3C2Zn0 .popout-2fzvxG .image-33JSyf{
-    background-color: #f7f7ff;
-}
-.headerTop-3C2Zn0 .popout-2fzvxG, .image-33JSyf.popout-2fzvxG{
-    height: 250px;
+.da-headerTop .da-avatarWrapper {
+    left: 0;
+    bottom: 0;
     width: 250px;
-}
-.popout-2fzvxG, .userPopout-3XzG_A .profile-ZOdGIb,
-.avatarHint-1qgaV3 {
+    height: 250px;
     border-radius: 0;
 }
-.headerTop-3C2Zn0 .maskProfile-1ObLFT {
-    mask: none;
-    -webkit-mask: none;
+.da-headerTop .da-avatarWrapper .da-wrapper {
+    height: 250px !important;
+    width: 250px !important;
 }
-.headerTop-3C2Zn0 .statusProfile-3ynqtt {
-    bottom: -3px;
-    left: 1px;
+.da-avatarHint {
+    width: 100%;
+    height: 100%;
+}
+.da-avatarHintInner {
+    font-size: 0.4em;
+    text-shadow: 1px 1px 3px black;
+}
+.da-headerTop foreignObject {
+    mask: none !important;
+}
+.da-headerTop rect {
+    border-radius: 0;
+    x: 0; y: 79;
+    width: 80px;
     height: 3px;
-    width: 248px;
-    border-radius: 0;
-    box-shadow: none;
-}
-.headerTop-3C2Zn0 {
-    padding: 0px 10px;
+    mask: none;
 }
 .headerText-2sdzFM {
     padding-bottom: 5px;
