"fixed status popout again". also included custom status

--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1873,7 +1873,7 @@
     flex-direction: unset;
 }
 
-div#popout_1, div#popout_2 {
+div#popout_398, div#popout_2 {
     position: absolute;
     left: 70px !important;
     width: 240px !important;
@@ -1886,7 +1886,7 @@ div#popout_1, div#popout_2 {
 }
 
 .separator-2zcjq8 {display: none;}
-div#popout_1 .da-menu, div#popout_2 .da-menu {
+div#popout_398 .da-menu, div#popout_2 .da-menu {
     width: 240px;
     border-radius: 0;
     bottom: 0;
@@ -1895,44 +1895,82 @@ div#popout_1 .da-menu, div#popout_2 .da-menu {
 .theme-dark .alt-3btY0e .helper-2c73HK {
     color: transparent;
 }
-div#popout_1 .item-1GzJrl , div#popout_2 .item-1GzJrl {
+div#popout_398 .item-1GzJrl , div#popout_2 .item-1GzJrl {
     transition: 350ms ease-in, box-shadow 500ms ease;/*
     box-shadow: inset -2px -2px 7px 0px rgba(26, 26, 26, 0.75); */
     background-image: linear-gradient(140deg, transparent,rgba(0,0,0,0.15), rgba(0,0,0,.25))
 }
-div#popout_1 .da-status, div#popout_2 .status-3fQvEa {
+div#popout_398 .da-status, div#popout_2 .status-3fQvEa {
     background-color: transparent;
 }
-div#popout_1 .item-1GzJrl:first-child, div#popout_2 .item-1GzJrl:first-child {
+div#popout_398 .item-1GzJrl:first-child, div#popout_2 .item-1GzJrl:first-child {
     background-color: #43b581;
     transition-delay: 150ms;
 }
-div#popout_1 .item-1GzJrl:nth-child(3), div#popout_2 .item-1GzJrl:nth-child(3) {
+div#popout_398 .item-1GzJrl:nth-child(3), div#popout_2 .item-1GzJrl:nth-child(3) {
     background-color: #faa61a;
     transition-delay: 200ms;
 }
-div#popout_1 .item-1GzJrl:nth-child(4), div#popout_2 .item-1GzJrl:nth-child(4) {
+div#popout_398 .item-1GzJrl:nth-child(4), div#popout_2 .item-1GzJrl:nth-child(4) {
     background-color: #f04747;
     transition-delay: 250ms;
 }
-div#popout_1 .item-1GzJrl:nth-child(5), div#popout_2 .item-1GzJrl:nth-child(5) {
+div#popout_398 .item-1GzJrl:nth-child(5), div#popout_2 .item-1GzJrl:nth-child(5) {
     background-color: #747f8d;
     transition-delay: 300ms;
 }
-div#popout_1 .item-1GzJrl:hover , div#popout_2 .item-1GzJrl:hover {
+div#popout_398 .item-1GzJrl:hover , div#popout_2 .item-1GzJrl:hover {
     opacity: 0.9;
     transition: 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-div#popout_1 .item-1GzJrl:active, div#popout_2 .item-1GzJrl:active {
+div#popout_398 .item-1GzJrl:active, div#popout_2 .item-1GzJrl:active {
     transform: scale(0.95);
     transition: 120ms ease-in;
 }
 .da-statusIconText *{
     display: none;
 }
-div#popout_1 .item-1GzJrl, div#popout_2 .item-1GzJrl {
+div#popout_398 .item-1GzJrl, div#popout_2 .item-1GzJrl {
     left: 0;
     top:0;
+}
+.da-menuItem {
+    position: absolute;
+    left: 100% !important;
+    margin-top: 2px;
+    background-color: #3e3c3c;
+    padding: 3px 8px;
+    text-align: center;
+    line-height: 15px;
+}
+.da-customStatus {
+    width: auto;
+    font-size: 0.67em;
+    color: #d7d1d1;
+}
+.da-customStatusIcon {
+    display: none;
+}
+.da-menuItem:hover .da-clearStatus {
+    top: 62%;
+    opacity: 1;
+    transition: 350ms ease-in;
+}
+.da-clearStatus {
+    position: absolute;
+    left: 40%;
+    top: 1000%;
+    opacity: 0;
+}
+@keyframes slide-in {
+    0% {width: 2px;opacity:0;}
+    25%{width: 10px; opacity: 0.2}
+    50%{width: 35px; opacity: 0.8}
+    75%{width: 50px; opacity: 1}
+    100%{width: 60px; opacity: 1}
+}
+.da-menuItem {
+    animation: slide-in ease-in 450ms 1;
 }
 /* Misc */
     /* */
