--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1872,7 +1872,7 @@
 .layer-v9HyYc[id*="popout"][style*="top:"]:not([style*="left:"]):not([id="popout_4669"]) {
     top: 0 !important;
 }
-.layer-v9HyYc[style*="top:"][style*="left:"]:not([id="popout_4669"]) {
+.layer-v9HyYc[id*="popout"][style*="top:"][style*="left:"]:not([id="popout_4669"]) {
     top: 50px !important;
 }
 /* Status Test */
