--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1876,14 +1876,14 @@
     top: 50px !important;
 }
 /* Status Test */
-.da-layer[id] .da-statusItem{
+#popout_2 .da-statusItem{
     display: inline-flex;
     width: 60px;
     overflow: hidden;
     height: 52px;
     flex-direction: unset;
 }
-.da-layer[id]:not([layer-id]):not([style*="top:"]):not([id="popout_4669"]) {
+#popout_2 {
     position: absolute;
     left: 70px !important;
     width: 240px !important;
@@ -1894,58 +1894,55 @@
     bottom: 0 !important;
     transition: 250ms ease-in;
 }
-.da-layer[id] .da-helper,
-.da-layer[id] .da-separator {display: none;}
-.da-layer[id] .da-menu{
+#popout_2 .da-helper,
+#popout_2 .da-separator {display: none;}
+#popout_2 .da-menu{
     width: 240px;
     border-radius: 0;
     bottom: 0;
     padding: 0;
 }
-.da-layer[id] .da-statusIconText div+div {display: none;}
-.theme-dark .alt-3btY0e .helper-2c73HK {
-    color: transparent;
-}
-.da-layer[id] .da-statusItem {
+#popout_2 .da-statusIconText div+div {display: none;}
+#popout_2 .da-statusItem {
     transition: 350ms ease-in, box-shadow 500ms ease;
     background-image: linear-gradient(140deg, transparent,rgba(0,0,0,0.15), rgba(0,0,0,.25))
 }
-.da-layer[id] .da-status {
+#popout_2 .da-status {
     background-color: transparent;
 }
-.da-layer[id] .da-statusItem:first-child {
+#popout_2 .da-statusItem:first-child {
     background-color: #43b581;
     transition-delay: 150ms;
 }
-.da-layer[id] .da-statusItem:nth-child(3) {
+#popout_2 .da-statusItem:nth-child(3) {
     background-color: #faa61a;
     transition-delay: 200ms;
 }
-.da-layer[id] .da-statusItem:nth-child(4){
+#popout_2 .da-statusItem:nth-child(4){
     background-color: #f04747;
     transition-delay: 250ms;
 }
-.da-layer[id] .da-statusItem:nth-child(5){
+#popout_2 .da-statusItem:nth-child(5){
     background-color: #747f8d;
     transition-delay: 300ms;
 }
-.da-layer[id] .da-statusItem:hover {
+#popout_2 .da-statusItem:hover {
     opacity: 0.9;
     transition: 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.da-layer[id] .da-statusItem:active {
+#popout_2 .da-statusItem:active {
     transform: scale(0.95);
     transition: 120ms ease-in;
 }
-.da-layer[id] .da-statusIconText *{
+#popout_2 .da-statusIconText *{
     display: none;
 }
-.da-layer[id] .da-statusItem {
+#popout_2 .da-statusItem {
     left: 0;
     top:0;
     margin: 0;
 }
-.da-layer[id] .da-menuItem {
+#popout_2 .da-menuItem {
     position: absolute;
     left: 100% !important;
     margin: 0;
@@ -1960,20 +1957,20 @@
     max-height: 52px;
     font-size: 0.65rem;
 }
-.da-layer[id] .da-customStatus {
+#popout_2 .da-customStatus {
     width: auto;
     font-size: 0.67em;
     color: #d7d1d1;
 }
-.da-layer[id] .da-customStatusIcon {
+#popout_2 .da-customStatusIcon {
     display: none;
 }
-.da-layer[id] .da-menuItem:hover .da-clearStatus {
+#popout_2 .da-menuItem:hover .da-clearStatus {
     top: 62%;
     opacity: 1;
     transition: 350ms ease-in;
 }
-.da-layer[id] .da-clearStatus {
+#popout_2 .da-clearStatus {
     position: absolute;
     left: 40%;
     top: 1000%;
@@ -1986,7 +1983,7 @@
     75%{width: 50px; opacity: 1}
     100%{width: 60px; opacity: 1}
 }
-.da-layer[id] .da-menuItem {
+#popout_2 .da-menuItem {
     animation: slide-in ease-in 450ms 1;
 }
 
