--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1872,21 +1872,15 @@
     background-size: 18px 22px;
 }
 /* */
-.layer-v9HyYc[id*="popout"][style*="top:"]:not([style*="left:"]):not([id="popout_4669"]):not([id="popout_4768"]) {
-    top: 0 !important;
-}
-.layer-v9HyYc[id*="popout"][style*="top:"][style*="left:"]:not([id="popout_4669"]) {
-    top: 50px !important;
-}
 /* Status Test */
-#popout_2 .da-statusItem{
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem{
     display: inline-flex;
     width: 60px;
     overflow: hidden;
     height: 52px;
     flex-direction: unset;
 }
-#popout_2 {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) {
     position: absolute;
     left: 70px !important;
     width: 240px !important;
@@ -1897,55 +1891,56 @@
     bottom: 0 !important;
     transition: 250ms ease-in;
 }
-#popout_2 .da-helper,
-#popout_2 .da-separator {display: none;}
-#popout_2 .da-menu{
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-helper,
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-separator {display: none;}
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-menu{
     width: 240px;
     border-radius: 0;
     bottom: 0;
     padding: 0;
 }
-#popout_2 .da-statusIconText div+div {display: none;}
-#popout_2 .da-statusItem {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusIconText div+div {display: none;}
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem {
     transition: 350ms ease-in, box-shadow 500ms ease;
     background-image: linear-gradient(140deg, transparent,rgba(0,0,0,0.15), rgba(0,0,0,.25))
 }
-#popout_2 .da-status {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-status {
     background-color: transparent;
 }
-#popout_2 .da-statusItem:first-child {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:first-child {
     background-color: #43b581;
     transition-delay: 150ms;
 }
-#popout_2 .da-statusItem:nth-child(3) {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:nth-child(3) {
     background-color: #faa61a;
     transition-delay: 200ms;
 }
-#popout_2 .da-statusItem:nth-child(4){
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:nth-child(4){
     background-color: #f04747;
     transition-delay: 250ms;
 }
-#popout_2 .da-statusItem:nth-child(5){
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:nth-child(5){
     background-color: #747f8d;
     transition-delay: 300ms;
 }
-#popout_2 .da-statusItem:hover {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:hover {
     opacity: 0.9;
     transition: 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-#popout_2 .da-statusItem:active {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:active {
     transform: scale(0.95);
     transition: 120ms ease-in;
 }
-#popout_2 .da-statusIconText *{
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusIconText *{
     display: none;
 }
-#popout_2 .da-statusItem {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem {
     left: 0;
     top:0;
     margin: 0;
+    border-radius: 0;
 }
-#popout_2 .da-menuItem {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-menuItem {
     position: absolute;
     left: 100% !important;
     margin: 0;
@@ -1960,20 +1955,20 @@
     max-height: 52px;
     font-size: 0.65rem;
 }
-#popout_2 .da-customStatus {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-customStatus {
     width: auto;
     font-size: 0.67em;
     color: #d7d1d1;
 }
-#popout_2 .da-customStatusIcon {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-customStatusIcon {
     display: none;
 }
-#popout_2 .da-menuItem:hover .da-clearStatus {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-menuItem:hover .da-clearStatus {
     top: 62%;
     opacity: 1;
     transition: 350ms ease-in;
 }
-#popout_2 .da-clearStatus {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-clearStatus {
     position: absolute;
     left: 40%;
     top: 1000%;
@@ -1986,7 +1981,7 @@
     75%{width: 50px; opacity: 1}
     100%{width: 60px; opacity: 1}
 }
-#popout_2 .da-menuItem {
+.da-layer[style*="left: 82px;"]:not([layer-id]):not([style*="top:"]) .da-menuItem {
     animation: slide-in ease-in 450ms 1;
 }
 
