--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -2181,12 +2181,16 @@ rect[transform] {
 .theme-dark .da-activityFeed {
     background-color: #1f1c1c;
 }
-.theme-dark .da-modal:not([style]) {
+.theme-dark .da-modal:not([style]), .theme-dark .root-1gCeng {
     background-color: #191717
 }
+.theme-dark .footer-3rDWdC,
 .theme-dark .da-modal .da-footer {
     background-color: #212121;
 }
 .da-modal .da-footer {
     padding: 16px 20px
+}
+.da-scroller {
+    background-color: transparent !important;
 }
