--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -509,12 +509,11 @@
     background: #f2f2ff;
 }
 .theme-dark .channel-2QD9_O.selected-1HYmZZ a, .theme-dark .channel-2QD9_O:hover a,
-.theme-dark .contentHoveredText-2D9B-x,
-.theme-dark .contentSelectedText-3wUhMi, .theme-dark .contentSelectedVoice-1WDIBM {
-    background: var(--dm-channel-color);
+.theme-dark .da-containerDefault.da-selected .da-content {
+    background-color: var(--dm-channel-color);
     background-image: linear-gradient(15deg, transparent, rgba(0,0,0,0.2));
 }
-.channel-2QD9_O.selected-1HYmZZ a, .channel-2QD9_O:hover a, .contentHoveredText-2D9B-x, .contentSelectedText-3wUhMi, .contentSelectedVoice-1WDIBM {
+.channel-2QD9_O.selected-1HYmZZ a, .channel-2QD9_O:hover a, .da-containerDefault:hover .da-content {
     background-image: linear-gradient(15deg, transparent, rgba(0,0,0,0.25));
 }
 #app-mount .channel-2QD9_O:hover a,
@@ -525,10 +524,11 @@
 .theme-light .name-3YKhmS {
     color: #010101;
 }
-.channel-2QD9_O a,
+.channel-2QD9_O a, .da-containerDefault .da-content,
 .content-20Aix8 {
     border-radius: var(--channel-radius);
 }
+.da-containerDefault:not(.da-selected):active .da-content,
 .channel-2QD9_O:not(.selected-1HYmZZ) a:active,
 .content-20Aix8:not(.contentSelectedText-3wUhMi):active {
     transform: scale(0.99);
@@ -537,27 +537,24 @@
 #app-mount .wrapper-2NJDcI {
     background: transparent;
 }
-.iconTransition-2pOJ7l {
+.da-clickable svg {
     transition: 150ms ease-in;
 }
-.theme-dark .iconCollapsed-3hFp_8, .theme-dark .iconDefault-3Gr8d2,
-.theme-dark .nameCollapsed-34uFWo, .theme-dark .nameDefault-2DI02H,
-.theme-dark .wrapper-2NJDcI {
+.theme-dark .da-containerDefault.da-selected .da-content, .theme-dark .da-containerDefault:hover .da-content {
     color: #a0a0a0
 }
-.theme-dark .nameDefaultText-24KCy5, 
-.theme-dark .nameDefaultVoice-3WUH7s, 
-.theme-dark .nameLockedText-3pqQcL, 
-.theme-dark .nameLockedVoice-26MhB1 {
+.theme-dark .modeMuted-3osy7j, .theme-dark .modeLocked-SZJhTy{
     color: #737171;
 }
 .theme-light .linkButtonIcon-Mlm5d6,
-.theme-light .channel-2QD9_O .name-2WpE7M {
+.theme-light .channel-2QD9_O .name-2WpE7M,
+.theme-light .da-containerDefault .da-name{
     color: #020202;
     opacity: 0.85;
 }
 .theme-light .channel-2QD9_O:not(.selected-1HYmZZ):hover .linkButtonIcon-Mlm5d6,
-.theme-light .channel-2QD9_O:not(.selected-1HYmZZ):hover .name-2WpE7M {
+.theme-light .channel-2QD9_O:not(.selected-1HYmZZ):hover .name-2WpE7M,
+.theme-light .da-containerDefault:not(.da-selected):hover .da-content{
     color: #c3c3c3;
 }
 .theme-light .unread-1Dp-OI {
@@ -569,7 +566,7 @@
 .theme-light .nameUnreadText-DfkrI4 {
     color: #141010;
 }
-.theme-light .contentSelectedText-3wUhMi, .theme-light .contentSelectedVoice-1WDIBM {
+.theme-light .da-containerDefault.da-selected .da-content {
     background-color: var(--lm-channel-color);
 }
 .theme-light .contentHoveredText-2D9B-x {
@@ -578,7 +575,7 @@
 .theme-light .contentHoveredText-2D9B-x .nameUnreadText-DfkrI4 {
     color: #e4e1e1;
 }
-.theme-light .nameHovered-1gxhWH, .theme-light .nameHoveredCollapsed-2orEWB, .theme-light .nameHoveredVoice-YJ1Vfd {
+.theme-light .da-containerDefault:hover .da-content {
     color: #010101;
     transition: 175ms ease;
 }
@@ -615,19 +612,12 @@
 .theme-light .da-panels .status {
     border-color: #f2f2ff;
 }
-.theme-light .button-2b6hmh {
-    opacity: 0.95;
-    filter: drop-shadow(0 0 1px #000);
+.da-panel .da-button {
+    opacity: 0.65;
 }
-.container-2Thooq {
-    margin-bottom: -1px;
-}
-.button-2b6hmh {
-    opacity: 0.15;
-}
-#app-mount .button-2b6hmh:hover {
+#app-mount .da-panel .da-button:hover {
     background-color: hsla(0, 0%, 6%, 0.8);
-    opacity: 0.45;
+    opacity: 0.95;
     transition: opacity 500ms cubic-bezier(0.09, 0.19, 0.61, 0.99), background-color 350ms ease;;
 }
 /* Settings */
